<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Instant Journal</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dbmain">DBMainActivity</string>
    <string name="btn_search_string">Search</string>
    <string name="btn_add_string">Add</string>
    <string name="btn_quickadd_string">Q&gt;</string>
    <string name="title_activity_add_update">AddUpdateActivity</string>
    <string name="btn_update_string">Update</string>
    <string name="title_activity_search_list">SearchListActivity</string>
    <string name="textview_timestamp">Timestamp</string>
    <string name="textview_key">Key</string>
    <string name="textview_value">Value</string>
    <string name="extraQuery">com.example.instantjournal.query</string>
    <string name="default_key">/daily/journal_entry</string>
    <string name="keyvalue_delimiter">::</string>
    <string name="title_activity_temp">TempActivity</string>
    <string name="title_activity_srch_list">SrchListActivity</string>
    <string name="btn_delete_string">Delete</string>

</resources>
